# webservices-bench-cpp

./: .gitignore  CMakeLists.txt  README.md  WebServicesBenchCPP.cmake.in
conf/: application.conf  db_con.conf
inc/: callDTO.hpp  customerDAO.hpp  customerDTO.hpp  customerHandler.hpp  statisticsDAO.hpp  statisticsHandler.hpp  testSuiteDTO.hpp
src/: application.cpp  callDTO.cpp  customerDAO.cpp  customerHandler.cpp  statisticsDAO.cpp  statisticsHandler.cpp  testSuiteDTO.cpp
test/: testCustomerDAO.cpp  testStatisticsDAO.cpp
thrift.generated/: CustomerService.cpp  CustomerService.h  CustomerService.tcc  StatsService.cpp  StatsService.h  StatsService.tcc  customer_constants.cpp  customer_constants.h  customer_types.cpp  customer_types.h  customer_types.tcc
